--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 /Assets/AssetStoreTools*
 /Assets/TextMesh Pro/*
 /Assets/Sounds
+/Assets/Resources
+/Promo/*
 
 # Visual Studio 2015 cache directory
 /.vs/
